@@ -55,9 +55,6 @@ public class TilknyttedeJournalposterTilgangRepository {
 	}
 
 	Set<Arkivsak> arkivsaker(List<ArkivJournalpost> tilknyttetArkivJournalposter, SafRequestContext safRequestContext) {
-		tilknyttetArkivJournalposter.forEach(arkivJournalpost ->
-				safRequestContext.getRequestCache().putArkivJournalpost(arkivJournalpost));
-
 		return tilknyttetArkivJournalposter.stream()
 				.filter(ArkivJournalpost::isTilknyttetSak)
 				.map(arkivJournalpost -> {
@@ -205,12 +202,12 @@ public class TilknyttedeJournalposterTilgangRepository {
 					}
 				})
 				.map(this::mapTilgangJournalpost)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	private TilgangJournalpost mapTilgangJournalpost(ArkivJournalpost arkivJournalpost) {
 		return TilgangJournalpost.builder()
-				.journalpostId(arkivJournalpost.journalpostId().toString())
+				.journalpostId(arkivJournalpost.journalpostId())
 				.journalstatus(JournalStatusCode.valueOf(arkivJournalpost.status()).toSafJournalstatus())
 				.skjerming(arkivJournalpost.skjerming() != null ? Skjerming.valueOf(arkivJournalpost.skjerming()) : null)
 				.dokumenter(arkivJournalpost.dokumenter().stream().map(dokdto ->
@@ -225,9 +222,9 @@ public class TilknyttedeJournalposterTilgangRepository {
 												.journalpostId(arkivJournalpost.journalpostId().toString())
 												.dokumentInfoId(dokdto.dokumentInfoId().toString())
 												.build())
-										.collect(Collectors.toList())
+										.toList()
 								)
-								.build()).collect(Collectors.toList()))
+								.build()).toList())
 				.build();
 	}
 }
